tests/NormalTests/paczka1/fuzzy1/99987241.err
Error in line 1: A193 A243 31,1
Error in line 20: lYFQpG7jQsM A193 9,5
Error in line 15: cZhYrhH A193 69,5
Error in line 6: 72KojNT9 A193 402,5
Error in line 29: 72KojNT9 A288 34,0
Error in line 28: cZhYrhH A231 27,1
